--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.10",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "^2.2.19",
+    "postcss": "^8.3.6",
+    "autoprefixer": "^10.3.1"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
