--- a/client/package.json
+++ b/client/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "axios": "^0.21.1",
+    "postcss": "^8.4.38",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.10",
-    "tailwindcss": "^2.2.19",
-    "postcss": "^8.3.6",
-    "autoprefixer": "^10.3.1"
+    "tailwindcss": "^3.4.3"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -36,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
