--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "axios": "^0.21.1",
+    "daisyui": "^4.11.1",
     "postcss": "^8.4.38",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
